--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,6 @@
-version: '3.9'
+version: "3.9"
 
 services:
   mongo:
-    image: mongo
-    container_name: todo-mongo
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo_data:/data/db
-      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
-      
-  api:
-    build: .
-    container_name: todo-api
-    env_file:
-      - .env
-    ports:
-      - "8080:8080"
-    depends_on:
-      - mongo
+    image: mongo:7
     restart: unless-stopped
-    
-volumes:
-  mongo_data:
