--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,40 @@
-version: "3.9"
-
 services:
+      
   mongo:
-    image: mongo:7
+    image: mongo
+    container_name: todo-mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
     restart: unless-stopped
+
+  api:
+    build: .
+    container_name: todo-api
+    env_file:
+      - .env
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mongo
+    restart: unless-stopped
+
+  mongo-test:
+    image: mongo
+    container_name: todo-mongo-test
+    ports:
+      - "27018:27017"
+    environment:
+      MONGO_INITDB_DATABASE: todo_test
+    volumes:
+      - mongo_test_data:/data/db   
+    restart: unless-stopped
+
+volumes:
+  mongo_data:
+  mongo_test_data:
